<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#eee"
        android:padding="5dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/idStdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_id"
            android:inputType="number"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/idStdName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name"
            android:inputType="text"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/idStdEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="5dp"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/idButtonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/idButtonView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view"
            style="@style/Widget.AppCompat.Button.Colored"
            />

    </LinearLayout>


</LinearLayout>